# youtube-data-logger

./: README.md  docker-compose.yml  pyproject.toml
services/app/: Dockerfile  client_secret.json  credentials.json  manage.py  requirements.txt
services/app/api/: __init__.py
services/app/api/config/: config.py
services/app/api/extensions/: extensions.py
services/app/api/routers/: register_routers.py
services/app/api/routers/channel/: channel.py
services/app/api/routers/playlist/: playlist.py
services/app/api/routers/video/: video.py
services/app/api/workers/: __init__.py
services/redis/: redis_subscriber.py
services/workers/: database_saver.py  example.db  helpers.py  requirements.txt
services/workers/database/: crud.py  database.py
services/workers/database/models/: channel.py
